--- a/THCalendarDatePicker/THDatePickerViewController.xib
+++ b/THCalendarDatePicker/THDatePickerViewController.xib
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="THDatePickerViewController">
             <connections>
                 <outlet property="calendarDaysView" destination="49" id="50"/>
-                <outlet property="clearBtn" destination="7" id="66"/>
                 <outlet property="closeBtn" destination="6" id="65"/>
                 <outlet property="monthLabel" destination="12" id="51"/>
                 <outlet property="nextBtn" destination="11" id="63"/>
-                <outlet property="okBtn" destination="8" id="67"/>
                 <outlet property="prevBtn" destination="9" id="64"/>
                 <outlet property="view" destination="5" id="48"/>
                 <outlet property="weekdaysView" destination="68" id="69"/>
@@ -79,42 +76,12 @@
                                     <rect key="frame" x="2" y="113" width="316" height="207"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
-                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8">
-                                    <rect key="frame" x="250" y="3" width="63" height="36"/>
-                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                    <state key="normal" image="dialog_ok">
-                                        <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                    </state>
-                                    <state key="disabled" image="calendar_ok-disabled"/>
-                                    <state key="highlighted">
-                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </state>
-                                    <connections>
-                                        <action selector="okPressed:" destination="-1" eventType="touchUpInside" id="61"/>
-                                    </connections>
-                                </button>
                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="Month" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="12">
                                     <rect key="frame" x="81" y="48" width="161" height="32"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7">
-                                    <rect key="frame" x="101" y="3" width="120" height="36"/>
-                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                    <state key="normal" image="dialog_clear">
-                                        <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                    </state>
-                                    <state key="disabled" image="calendar_clear-disabled"/>
-                                    <state key="highlighted">
-                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </state>
-                                    <connections>
-                                        <action selector="clearPressed:" destination="-1" eventType="touchUpInside" id="59"/>
-                                    </connections>
-                                </button>
                             </subviews>
                             <constraints>
                                 <constraint firstAttribute="width" constant="320" id="G5S-5U-Jba"/>
@@ -143,11 +110,7 @@
     <resources>
         <image name="arrow_left" width="37" height="37"/>
         <image name="arrow_right" width="37" height="37"/>
-        <image name="calendar_clear-disabled" width="37" height="37"/>
-        <image name="calendar_ok-disabled" width="37" height="37"/>
         <image name="dialog_cancel" width="37" height="37"/>
-        <image name="dialog_clear" width="37" height="37"/>
-        <image name="dialog_ok" width="37" height="37"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
